--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>  
-    <h1 class="page-title">Propriedades CSS Flexbox</h1>
+    <h1 class="page-title">Propriedade CSS Flexbox</h1>
 
     <section class="property-sectin">
     <h2 class="property-title">display: flex</h2>
     <p class="propert-explanation">Essa é a primeira propriedade que precisa ser declarada com o valor "flex"
-     para que o flex box funcione</p>
+     para que o flexbox funcione</p>
 
 <div class="parent-box">
 
